# cproject

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  builder.Dockerfile  clang-format.json  clang-tidy.json  makefile  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/dummy/: dummy.h
src/: dummy.c
tests/unittest/: project.yml
tests/unittest/support/: unity_config.h
tests/unittest/test/: test_dummy.c
